# python-turtle-drawing

./: .gitignore  .pre-commit-config.yaml  bandit.yml  disable_beartype.ini  pyproject.toml  pytest.ini
python_turtle_art/: body.py  body_parts.py  diamond.py  face.py  helpers.py  kite.py  line.py  main.py  pine_cone.py  shape.py  write.py
src/python_turtle_art/: __init__.py  cli.py  draw.py  fill.py  helpers.py  kite.py  polygon.py  vertex_collection.py  write.py
src/python_turtle_art/drawings/: __init__.py
src/python_turtle_art/drawings/pine_cones/: body.py  cuvred_kite_factory.py  face.py  main.py  pine_cone.py
src/python_turtle_art/drawings/stars_3bp/: main.py
src/python_turtle_art/filling/: __init__.py  base_convex_fill.py  base_fill.py  colour_fill.py  convex_fill.py  horizontal_stripe_fill.py  stripes.py  vertical_stripe_fill.py
src/python_turtle_art/filling/stripes/: hash_fill.py  horizontal_stripe_fill.py  stripes_calculation.py  vertical_stripe_fill.py
src/python_turtle_art/helpers/: angles.py  rotation.py  turtle.py
src/python_turtle_art/lines/: __init__.py  line.py  line_intersection.py  offset_from_line.py  quadratic_bezier_curve.py
src/python_turtle_art/pine_cones/: body.py  body_part.py  face.py  line.py  main.py  pine_cone.py
src/python_turtle_art/polygons/: convex_mixin.py  convex_polygon.py  is_convex.py  kite.py  polygon.py
src/python_turtle_art/stars/: main.py
src/python_turtle_art/vertices/: vertices.py
src/python_turtle_drawing/: cli.py  kite.py  polygon.py
src/python_turtle_drawing/pine_cones/: body.py  body_part.py  face.py  kite.py  line.py  main.py  pine_cone.py
src/python_turtle_drawing/stars/: main.py
tests/: conftest.py  helpers.py  test_pine_cones.py
tests/component/: conftest.py
tests/component/filling/: test_colour_fill.py
tests/component/lines/: test_line.py  test_quadratic_bezier_curve.py
tests/drawings/: conftest.py  helpers.py  test_pine_cones.py  test_stars_3bp.py
tests/unit/lines/: test_line.py  test_quadratic_bezier_curve.py
tests/unit/polygons/: test_polygon.py
tests/unit/vertices/: test_GetExtremeVerticesMixin.py
(+39 files in other folders)
