[project]
name = "python-turtle-art"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Richard Angell", email = "richardangell37@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy~=1.26.4",
    "pillow~=10.2.0",
]

[project.scripts]
python-turtle-art = "python_turtle_art.cli:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit==4.1.0",
    "pytest~=8.0.2",
]
